Jazzyard/static/styles.css
.container {
    z-index: 5;
    height: auto;
    width: auto;
    overflow: hidden;
    position: sticky;
    top: 1px;
    text-align: center;
    border-radius: 7px;
    border: 1px solid;
    border-color: cadetblue;
  }

  #musicinstrumentscatalog {
    background-color: white;
    margin-left: 65px;
  }

  .main {
    position: relative;
    margin: 0 auto;
  }

  .containerbody {
    margin-top:7px!important;
    z-index: 5;
    height: auto;
    width: auto;
    overflow: hidden;
    background: white;
    position: sticky;
    top: 0px;
    text-align: center;
  }
  
  .searchbar-form .search-key-box {
    position: relative;
    width: auto;
    overflow: hidden;
    height: 40px;
    border: 1px solid cadetblue;
    border-radius: 6px 0 0 6px;
  }

  .search-button{
    visibility: hidden;
  }

.logo
{
   width:90px;
}

.nav{
  display:flex!important;
}

.nav>.nav-links>ul li:hover {
  background-color: cadetblue; 
  border-radius: 5px;
}

.nav>.nav-links>ul li.active {
  background-color: cadetblue; 
  border-radius: 5px;
}

.nav>.nav-links>ul li {
  display: inline-block;
  margin: 10px;
}

.nav>.nav-btn {
  display: none;
}

.nav>#nav-check {
  display: none;
}

ul.navLinks li.icon {
  display: none;
}



.nav>.nav-links {
    font-size: 16px;
    display: inline;
    overflow: hidden;
    bottom: 0;
  }

  .nav-link, .nav>.nav-links>ul li a {
    color: black;
    line-height: 40px;
    font-size: 34px;
    font-weight: 600;
    display: block;
    padding: 0 8px;
    text-decoration: none;
  }

  .nav>.nav-links>ul {
    list-style: none;
    position: relative;
  }


.nav>.nav-links>ul li:hover {
    background-color: cadetblue; 
    border-radius: 5px;
  }

  .nav>.nav-links>ul li.active {
    background-color: cadetblue;
    border-radius: 5px;
  }

  .nav>.nav-links>ul li {
    display: inline-block;
    margin: 10px;
  }

  .nav>.nav-btn {
    display: none;
  }

  .nav>#nav-check {
    display: none;
  }

  ul.navLinks li.icon {
    display: none;
  }
  
  .container, .container-lg, .container-md, .container-sm, .container-xl {
    max-width:100%!important;
   }

   .col-25 {
    float: left;
    width: 25%;
    margin-top: 6px;
  }
  
  .col-75 {
    float: left;
    width: 75%;
    margin-top: 6px;
  }

  .header {
    width: fit-content;
    background: white;
    position: sticky;
    box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.45);
    top: 0px;
    z-index: 10;
    text-align: center;
    overflow: hidden;
    font-family: Open Sans, Roboto, Arial, Helvetica, sans-serif, SimSun;
    float: left;
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(5.4px);
    -webkit-backdrop-filter: blur(5.4px);
    border: 1px solid rgba(80, 82, 81, 0.24);
  }

  .cards {
    display: flex;
    flex-wrap: wrap;
    list-style: none;
    margin: 0;
    padding: 0;
    border-radius: 8px;
    float: left;
    margin-left:35%;
  }

  .cards_item {
    display: flex;
    padding: 1rem;
    border-radius: 8px;
  }

  .product_card_desc {
    display: flex;
    padding: 1rem;
    border-radius: 8px;
    width: 55%;
  }
  .searchbtn{
    display: none;
  }

  .navLinks
  {
    float:right;
  }

  ul.navLinks li:not(:first-child) 
  {
      display: none;
  }

  ul.navLinks li.icon {
    float: right;
    display: inline-block;
  }

  ul.navLinks.responsive 
  {
      position: relative;
  }

  ul.navLinks.responsive li.icon 
  {
    position: absolute;
    right: 0;
    top: 0;
  }

  ul.navLinks.responsive li 
  {
    float: none;
    display: inline;
  }

  ul.navLinks.responsive li a 
  {
    display: block;
    text-align: left;
  }

  .nav > .nav-links {
      position:relative;    
  }

  .product_card_images {
    display: flex;
    padding: 1rem;
    border-radius: 8px;
  }

  .cart {
    height: 45px;
    width: 45px;
    background: url(./shopping-cart.png);
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center left;
    float: right;
    cursor: pointer;
  }

  #cartcount {
    color: cadetblue;
    font-weight: 500;
    height: 55px;
    width: 55px;
    float: right;
    cursor: pointer;
    padding: 30px 28px 12px 5px;
    display: block;
    left: auto;
    right: 0px;
    margin-top: -8px;
    margin-right: -10px;
    z-index: 100;
  }

  #searchproducts{
    border: 1px solid cadetblue;
    width: 500%;
    margin-left:200%;
    margin-top:5px;
  }

  .btn{
    font-family: Open Sans, Roboto, Arial, Helvetica, sans-serif, SimSun!important;
    background-color: cadetblue!important;
    color:black!important;
    font-weight: bold!important;
    width: 150px!important;
    display:inline-block !important;
  }

  .btncancel{
    font-family: Open Sans, Roboto, Arial, Helvetica, sans-serif, SimSun!important;
    background-color: cadetblue!important;
    color:black!important;
    font-weight: bold!important;
    width: 150px!important;
    display:inline-block !important;
  }

  input {
    margin-left: 5px;
    width: 100%;
    height: 100%;
    position: relative;
    display: block;
    padding: 11px 10px 11px 0;
    line-height: 18px;
    font-family: Open Sans, Roboto, Arial, Helvetica, sans-serif, SimSun;
    border: none;
    outline: none;
  }

  select {
    width: 50px;
    margin: 15px 0px 15px 0px;
    position: relative;
    display: block;
    line-height: 18px;
    font-size: 13px;
    font-family: Open Sans, Roboto, Arial, Helvetica, sans-serif, SimSun;
  }

  

